@@ -1,7 +1,7 @@
 #  File src/library/utils/R/head.R
 #  Part of the R package, https://www.R-project.org
 #
-#  Copyright (C) 1995-2015 The R Core Team
+#  Copyright (C) 1995-2019 The R Core Team
 #
 #  This program is free software; you can redistribute it and/or modify
 #  it under the terms of the GNU General Public License as published by
@@ -21,30 +21,41 @@
 ###
 ### Adapted for negative arguments by Vincent Goulet
 ### <vincent.goulet@act.ulaval.ca>, 2006
+###
+### Adapted for vector n in k-dimensional object
+### case (df/matrix/array) by Gabriel Becker
+### <gabembecker@gmail.com>, 2019
 
 head <- function(x, ...) UseMethod("head")
 
+## used on vectors, arrays, data frames, .. :
 head.default <- function(x, n = 6L, ...)
 {
-    stopifnot(length(n) == 1L)
-    n <- if (n < 0L) max(length(x) + n, 0L) else min(n, length(x))
-    x[seq_len(n)]
+    ## lapply over "dimensions" even for x without dim attribute.
+    ds <- dim(x) %||% length(x)
+    indvecs <- lapply(seq_along(ds), function(i) {
+        ## All non-specified dimensions (ie dims > length(n) or n[i] is NA)
+        ## are taken to be the maximum (display all indices in that dimension)
+        di <- ds[i]
+        ## NB: relies on n[i] returning NA if i > length(n)!
+        ni <- if(!is.na(n[i])) n[i] else di
+        ## negative indices work as a they always have, no restriction
+        ## against mixing negative and positive ns across different dims
+        ni <- if(ni < 0L) max(di + ni, 0L) else min(ni, di)
+        seq_len(ni)
+    })
+    do.call(`[`, c(list(x), indvecs,
+                   if(!is.null(dim(x))) list(drop = FALSE)))
 }
 
 ## head.matrix and tail.matrix are now exported (to be used for other classes)
-head.data.frame <- head.matrix <- function(x, n = 6L, ...)
-{
-    stopifnot(length(n) == 1L)
-    n <- if (n < 0L) max(nrow(x) + n, 0L) else min(n, nrow(x))
-    x[seq_len(n), , drop=FALSE]
-}
-head.table  <- function(x, n = 6L, ...) {
-    (if(length(dim(x)) == 2L) head.matrix else head.default)(x, n=n)
-}
+head.matrix <- head.default
+## head.array is not needed (nor would head.matrix be) as it would be identical
 
 head.ftable <- function(x, n = 6L, ...) {
     r <- format(x)
-    dimnames(r) <- list(rep.int("", nrow(r)), rep.int("", ncol(r)))
+    dimnames(r) <- list(rep.int("", nrow(r)),
+                        rep.int("", ncol(r)))
     noquote(head.matrix(r, n = n + nrow(r) - nrow(x), ...))
 }
 
@@ -57,39 +68,40 @@ head.function <- function(x, n = 6L, ...)
 
 tail <- function(x, ...) UseMethod("tail")
 
-tail.default <- function(x, n = 6L, ...)
+## tail.array()  has  'addrownums = TRUE' ;  tail.default doesn't
+.tailindices <- function(x, n)
 {
-    stopifnot(length(n) == 1L)
-    xlen <- length(x)
-    n <- if (n < 0L) max(xlen + n, 0L) else min(n, xlen)
-    x[seq.int(to = xlen, length.out = n)]
+    ds <- dim(x) %||% length(x)
+    ## returns a list of vectors of indices in each dimension,
+    ## regardless of length of the  n  argument :
+    lapply(seq_along(ds), function(i) {
+        dxi <- ds[i]
+        ## select all indices (full dim) if not specified
+        ni <- if(!is.na(n[i])) n[i] else dxi
+        seq.int(to = dxi, ## handle negative n's; result is *integer* iff ds[] is
+                length.out = if(ni < 0L) max(dxi + ni, 0L) else min(ni, dxi))
+    })
 }
 
-tail.data.frame <- function(x, n = 6L, ...)
+# also for data.frame
+tail.default <- function (x, n = 6L, ...)
 {
-    stopifnot(length(n) == 1L)
-    nrx <- nrow(x)
-    n <- if (n < 0L) max(nrx + n, 0L) else min(n, nrx)
-    x[seq.int(to = nrx, length.out = n), , drop = FALSE]
+    do.call(`[`, c(list(x), .tailindices(x, n),
+                   if(!is.null(dim(x))) list(drop = FALSE)))
 }
 
-tail.matrix <- function(x, n = 6L, addrownums = TRUE, ...)
+
+## tail.matrix is exported (to be reused)
+tail.array <- tail.matrix <-
+    tail.table <- function(x, n = 6L, addrownums = TRUE, ...)
 {
-    stopifnot(length(n) == 1L)
-    nrx <- nrow(x)
-    n <- if (n < 0L) max(nrx + n, 0L) else min(n, nrx)
-    sel <- as.integer(seq.int(to = nrx, length.out = n))
-    ## TODO: Once we allow "LONG_DIM" for matrices, need
-    ## sel <- seq.int(to = nrx, length.out = n)
-    ## if(nrx <= .Machine$integer.max) sel <- as.integer(sel)
-    ans <- x[sel, , drop = FALSE]
-    if (addrownums && is.null(rownames(x)))
-	rownames(ans) <- format(sprintf("[%d,]", sel), justify="right")
+    sel <- .tailindices(x, n)
+    ans <- do.call(`[`, c(list(x), sel, drop = FALSE))
+
+    if (length(dim(x)) > 1L && addrownums && is.null(rownames(x)))
+        ## first element of sel is the rows selected
+	rownames(ans) <- format(sprintf("[%d,]", sel[[1]]), justify="right")
     ans
-}
-tail.table  <- function(x, n = 6L, addrownums = TRUE, ...) {
-    (if(length(dim(x)) == 2L) tail.matrix else tail.default)(x, n=n,
-	      addrownums = addrownums, ...)
 }
 
 tail.ftable <- function(x, n = 6L, addrownums = FALSE, ...) {
