@@ -1,26 +1,22 @@
 % File src/library/utils/man/head.Rd
 % Part of the R package, https://www.R-project.org
-% Copyright 1995-2017 R Core Team
+% Copyright 1995-2019 R Core Team
 % Distributed under GPL 2 or later
 
 \name{head}
+\title{Return the First or Last Parts of an Object}
 \alias{head}
 \alias{head.default}
-\alias{head.data.frame}
 \alias{head.function}
 \alias{head.ftable}
-\alias{head.table}
 \alias{head.matrix}
 \alias{tail}
 \alias{tail.default}
-\alias{tail.data.frame}
 \alias{tail.function}
 \alias{tail.ftable}
 \alias{tail.table}
 \alias{tail.matrix}
-\title{
-  Return the First or Last Part of an Object
-}
+\alias{tail.array}
 \description{
   Returns the first or last parts of a vector, matrix, table, data frame
   or function.  Since \code{head()} and \code{tail()} are generic
@@ -29,40 +25,56 @@
 \usage{
 head(x, \dots)
 \method{head}{default}(x, n = 6L, \dots)
-\method{head}{data.frame}(x, n = 6L, \dots)
-\method{head}{matrix}(x, n = 6L, \dots)
-\method{head}{ftable}(x, n = 6L, \dots)
-\method{head}{table}(x, n = 6L, \dots)
+% head.matrix(x, n = 6L, \dots) # <-- gives NOTE
+\method{head}{matrix}(x, n = 6L, \dots) # is exported as head.matrix()
 \method{head}{function}(x, n = 6L, \dots)
+\method{head}{ftable}(x, n = 6L, \dots)
 
 tail(x, \dots)
 \method{tail}{default}(x, n = 6L, \dots)
-\method{tail}{data.frame}(x, n = 6L, \dots)
-\method{tail}{matrix}(x, n = 6L, addrownums = TRUE, \dots)
+\method{tail}{matrix}(x, n = 6L, addrownums = TRUE, \dots) # exported as tail.matrix()
+\method{tail}{array}(x, n = 6L, addrownums = TRUE, \dots)
 \method{tail}{ftable}(x, n = 6L, addrownums = FALSE, \dots)
 \method{tail}{table}(x, n = 6L, addrownums = TRUE, \dots)
 \method{tail}{function}(x, n = 6L, \dots)
 }
 \arguments{
   \item{x}{an object}
-  \item{n}{a single integer.  If positive or zero, size for the resulting
-    object: number of elements for a vector (including lists), rows for
-    a matrix or data frame or lines for a function.  If negative, all but
-    the \code{n} last/first number of elements of \code{x}.}
+  \item{n}{an integer vector of length up to \code{dim(x)} (or 1,
+    for non-dimensioned objects). Values specify the indices to be
+    selected in the corresponding dimension (or along the length) of the
+    object. A positive value of \code{n[i]} includes the first/last
+    \code{n[i]} indices in that dimension, while a negative value
+    excludes the last/first \code{abs(n[i])}, including all remaining
+    indices. \code{NA} or non-specified values (when \code{length(n) <
+      length(dim(x))}) select all indices in that dimension.}
   \item{addrownums}{if there are no row names, create them from the row
     numbers.}
   \item{\dots}{arguments to be passed to or from other methods.}
 }
 \details{
-  For matrices, 2-dim tables and data frames, \code{head()} (\code{tail()}) returns
-  the first (last) \code{n} rows when \code{n >= 0} or all but the
-  last (first) \code{n} rows when \code{n < 0}.  \code{head.matrix()} and
-  \code{tail.matrix()} are exported.  For functions, the
-  lines of the deparsed function are returned as character strings.
+  For vector/array based objects, \code{head()} (\code{tail()}) returns
+  a subset of the same dimensionality as \code{x}, usually of
+  the same class. For historical reasons, by default they select the
+  first (last) 6 indices in the first dimension ("rows") or along the
+  length of a non-dimensioned vector, and the full extent (all indices)
+  in any remaining dimensions. \code{head.matrix()} and
+  \code{tail.matrix()} are exported.
 
-  If a matrix has no row names, then \code{tail()} will add row names of
-  the form \code{"[n,]"} to the result, so that it looks similar to the
-  last lines of \code{x} when printed.  Setting
+
+  The default and array(/matrix) methods for \code{head()} and
+  \code{tail()} are quite general. They will work as is for any class
+  which has a \code{dim()} method, a \code{length()} method (only
+  required if \code{dim()} returns \code{NULL}), and a \code{[} method
+  (that accepts the \code{drop} argument and can subset in all
+  dimensions in the dimensioned case).
+
+  For functions, the lines of the deparsed function are returned as
+  character strings.
+
+  If an array(/matrix) has no row names, then \code{tail()} will add row
+  names of the form \code{"[n,]"} to the result, so that it looks
+  similar to the last lines of \code{x} when printed.  Setting
   \code{addrownums = FALSE} suppresses this behaviour.
 }
 \value{
@@ -71,7 +83,7 @@ tail(x, \dots)
 }
 \author{
   Patrick Burns, improved and corrected by R-Core. Negative argument
-  added by Vincent Goulet.
+  added by Vincent Goulet.  Multi-dimension support added by Gabriel Becker.
 }
 
 \examples{
@@ -81,13 +93,23 @@ head(letters, n = -6L)
 head(freeny.x, n = 10L)
 head(freeny.y)
 
+head(iris3)
+head(iris3, c(6L, 2L))
+head(iris3, c(6L, -1L, 2L))
+
 tail(letters)
 tail(letters, n = -6L)
 
 tail(freeny.x)
+## the bottom-right "corner" :
+tail(freeny.x, n = c(4, 2))
 tail(freeny.y)
 
-tail(library)
+tail(iris3)
+tail(iris3, c(6L, 2L))
+tail(iris3, c(6L, -1L, 2L))
+
+tail(library) # last lines of function
 
 head(stats::ftable(Titanic))
 }
